[gd_scene load_steps=15 format=3 uid="uid://c138k6plon5kg"]

[ext_resource type="Texture2D" uid="uid://d3igmjq3kprlf" path="res://enemy ship/enemy ship.png" id="1_0ri4l"]
[ext_resource type="Script" uid="uid://cdcxviixpfxur" path="res://enemy ship/enemy.gd" id="1_v64lm"]
[ext_resource type="Texture2D" uid="uid://bk0giyofni0fm" path="res://enemy ship/enemy ship (exploded).png" id="3_4nmka"]

[sub_resource type="CircleShape2D" id="CircleShape2D_v64lm"]
radius = 15.0333

[sub_resource type="CircleShape2D" id="CircleShape2D_0ri4l"]
radius = 62.0081

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_bok0v"]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 3
particles_anim_loop = false

[sub_resource type="Gradient" id="Gradient_thqsw"]
offsets = PackedFloat32Array(0.7, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qqi15"]
gradient = SubResource("Gradient_thqsw")

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_8qrmx"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_shr4c"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 40.0
angle_min = -180.0
angle_max = 180.0
inherit_velocity_ratio = 5.0
spread = 180.0
initial_velocity_min = 40.0
initial_velocity_max = 60.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
directional_velocity_min = 1.0
directional_velocity_max = 1.0
directional_velocity_curve = SubResource("CurveXYZTexture_8qrmx")
gravity = Vector3(0, 0, 0)
attractor_interaction_enabled = false
scale_min = 4.0
scale_max = 4.0
color_ramp = SubResource("GradientTexture1D_qqi15")
anim_offset_max = 1.0

[sub_resource type="Curve" id="Curve_bok0v"]
_limits = [-360.0, 360.0, 0.0, 1.0]
_data = [Vector2(0, 76.854), 0.0, 0.0, 0, 0, Vector2(1, 44.4944), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_4nmka"]
_limits = [-200.0, 200.0, 0.0, 1.0]
_data = [Vector2(0, 15.7303), 0.0, 0.0, 0, 0, Vector2(1, -56.1797), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_thqsw"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.797753), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_qqi15"]
offsets = PackedFloat32Array(0, 0.353333, 0.586667, 0.74, 1)
colors = PackedColorArray(1, 0.784314, 0, 1, 1, 0.458824, 0, 1, 0.763715, 0.310268, 0, 1, 0.389287, 0.389287, 0.389287, 1, 0.247059, 0.247059, 0.247059, 0)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_v64lm")

[node name="Collision" type="CollisionShape2D" parent="."]
rotation = 1.5708
scale = Vector2(4, 4)
shape = SubResource("CircleShape2D_v64lm")

[node name="EnemySprite" type="Sprite2D" parent="."]
texture_filter = 1
rotation = 1.5708
scale = Vector2(4, 4)
texture = ExtResource("1_0ri4l")

[node name="AreaHit" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="AreaHitCollision" type="CollisionShape2D" parent="AreaHit"]
shape = SubResource("CircleShape2D_0ri4l")

[node name="ExplodedShipParticles" type="GPUParticles2D" parent="."]
texture_filter = 1
material = SubResource("CanvasItemMaterial_bok0v")
emitting = false
amount = 15
texture = ExtResource("3_4nmka")
lifetime = 2.5
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_shr4c")

[node name="Explosion" type="CPUParticles2D" parent="."]
emitting = false
amount = 80
lifetime = 2.0
one_shot = true
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 15.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 60.0
initial_velocity_max = 120.0
angular_velocity_min = 5.0
angular_velocity_max = 10.0
angular_velocity_curve = SubResource("Curve_bok0v")
linear_accel_max = 10.0
linear_accel_curve = SubResource("Curve_4nmka")
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 5.0
scale_amount_max = 20.0
scale_amount_curve = SubResource("Curve_thqsw")
color_ramp = SubResource("Gradient_qqi15")

[node name="DamageColorTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="UpdateGoalPointTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="AreaHit" to="." method="_on_area_hit_body_entered"]
[connection signal="finished" from="ExplodedShipParticles" to="." method="_on_exploded_ship_particles_finished"]
[connection signal="timeout" from="DamageColorTimer" to="." method="_on_damage_color_timer_timeout"]
[connection signal="timeout" from="UpdateGoalPointTimer" to="." method="_on_update_goal_point_timer_timeout"]
